2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb337.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb337.cfg: New (relocated from /make/custom).
	* make/custom/csb637.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-07-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* network/network.c: Add csb637 PHY code based upon that in
	MicroMonitor 1.17.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-06-18	Fernando Nicodemos <fgnicodemos@terra.com.br>

	* Makefile.am, configure.ac, console/uarts.c: Add console device that
	uses MicroMonitor to do actual input and output. This driver should
	work on any board that uses MicroMonitor.

2009-06-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds, startup/linkcmds.csb637: Move .init section from
	the front of the executable so the start label has the first
	instruction in the executable.

2009-06-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Make an RTEMS specific umon.h wrapper
	include file.

2009-06-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Re-add basic console code.

2009-06-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Add MicroMonitor support.

2009-06-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Add MicroMonitor support.
	* startup/umonsupp.c: New file.

2009-06-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* network/network.c: Attempt to support csb637 PHY.

2009-06-04	Xi Yang <hiyangxi@gmail.com>

	* startup/bspstart.c: Eliminate unused variables.
