@@ -35,6 +35,7 @@ RTEMS_BSPOPTS_HELP([ENABLE_UMON_CONSOLE],
 AM_CONDITIONAL(ENABLE_LCD,test "$ENABLE_UMON_CONSOLE" = "1")
 
 RTEMS_BSP_CLEANUP_OPTIONS(1, 1)
+RTEMS_BSP_LINKCMDS
 
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile])
