@@ -4,7 +4,4 @@
 #  $Id$
 #
 
-RTEMS_LINKCMDS=linkcmds.csb637
-LDFLAGS += -qnolinkcmds -T $(RTEMS_LINKCMDS) 
-
 include $(RTEMS_ROOT)/make/custom/csb337.cfg
