@@ -102,9 +102,5 @@ TMPINSTALL_FILES += $(PROJECT_LIB)/start.$(OBJEXT)
 
 $(PROJECT_LIB)/linkcmds: startup/linkcmds $(PROJECT_LIB)/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_LIB)/linkcmds
-PREINSTALL_FILES += $(PROJECT_LIB)/linkcmds
-
-$(PROJECT_LIB)/linkcmds.csb637: startup/linkcmds.csb637 $(PROJECT_LIB)/$(dirstamp)
-	$(INSTALL_DATA) $< $(PROJECT_LIB)/linkcmds.csb637
-PREINSTALL_FILES += $(PROJECT_LIB)/linkcmds.csb637
+TMPINSTALL_FILES += $(PROJECT_LIB)/linkcmds
 
