@@ -1,3 +1,11 @@
+2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* configure.ac: Add RTEMS_BSP_LINKCMDS.
+	* make/custom/csb637.cfg: Remove LDFLAGS. Remove RTEMS_LINKCMDS.
+	* startup/linkcmds: Remove (Rename into linkcmds.csb337).
+	* startup/linkcmds.csb337: New (Renamed from linkcmds).
+	* Makefile.am: Rework linkcmds handling.
+
 2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* make/custom/csb337.cfg: Remove RTEMS_BSP_FAMILY.
